@@ -62,14 +62,14 @@ features are added to the project. If you find any inaccuracies
 </td></tr>
 <tr>
 <td style="background-color: rgb(236, 236, 236); border: 1px solid rgb(204, 204, 204); padding: 2px 4px; font-weight: bold;"> Version
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> 8.5
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> 2.1
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> 8.6
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> 2.2
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> 0.4 alpha
 </td></tr>
 <tr>
 <td style="background-color: rgb(236, 236, 236); border: 1px solid rgb(204, 204, 204); padding: 2px 4px; font-weight: bold;"> Last Update
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> May 2017
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> April 2012
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> July 2017
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> November 2015
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"> April 2011
 </td></tr>
 <tr>
@@ -531,6 +531,14 @@ contact us as the service depends on RFC implementations, some adjustements may 
 </td></tr>
 
 <tr style="border-top: 2px solid rgb(204, 204, 204);">
+<td style="background-color: rgb(236, 236, 236); border: 1px solid rgb(204, 204, 204); padding: 2px 4px; font-weight: bold;"><a title="Radmin2">Asterisk</a>
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;">
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="17" width="20">
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
+</td></tr>
+
+<tr style="border-top: 2px solid rgb(204, 204, 204);">
 <td style="background-color: rgb(236, 236, 236); border: 1px solid rgb(204, 204, 204); padding: 2px 4px; font-weight: bold;" ROWSPAN=3> <a title="Remote Desktop Protocol">RDP</a>
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;">Windows Workstation
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="18" width="22">
@@ -692,11 +700,11 @@ contact us as the service depends on RFC implementations, some adjustements may 
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
 </td></tr>
 <tr><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;">EXPN cmd</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="17" width="20">
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="17" width="20">
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
 </td></tr>
 <tr><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;">RCPT TO cmd</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="17" width="20">
-</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
+</td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="Yes" src="Tick.png" border="0" height="17" width="20">
 </td><td style="border: 1px solid rgb(204, 204, 204); padding: 2px 4px; text-align: center;"><img alt="No" src="Cross.png" border="0" height="18" width="22">
 </td></tr>
 
